Fix text grammar and modify button visible texts

--- a/site/src/docs/about/this-is-hds/styles.scss
+++ b/site/src/docs/about/this-is-hds/styles.scss
@@ -321,12 +321,6 @@
     }
   }
 
-  &.info-page-card-grid-item-dark {
-    & [role="heading"] {
-      color: var(--color-white);
-    }
-  }
-
   &.info-page-card-grid-item-coat {
     background-color: var(--color-coat-of-arms-light);
   }
